@@ -1,5 +1,13 @@
 2009-10-04  Mo DeJong  <mdejong@users.sourceforge.net>
 
+	* src/jacl/tcl/lang/Regex.java (match, _match,
+        replaceFirst, replaceAll): Rewrite -start offset
+        logic to correctly deal with odd edge cases.
+	* tests/tcl/regexp.test: Add additional test cases
+        that cover -start index edge cases.
+
+2009-10-04  Mo DeJong  <mdejong@users.sourceforge.net>
+
 	* src/jacl/tcl/lang/RegexpCmd.java (cmdProc):
 	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):
         Rewrite argument processing logic to avoid using
